[package]
name = "backend-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-rustls", "macros","with-time","with-json","with-uuid","postgres-array","debug-print" ] }
dotenv = "0.15.0"
log = "0.4.17"
tracing-subscriber = "0.3.16"

[dependencies.actix-web]
version = "4"
